exercise/8.2/deployment-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      affinity:
        # podAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #   - labelSelector:
        #       matchExpressions:
        #         - key: a
        #           operator: In
        #           values:
        #             - b
        #     topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - http
            topologyKey: kubernetes.io/hostname
      imagePullSecrets:      
        - name: lincoln 
      containers:
        - 
          name: http
          image: linkinlxm/cncamp:1.8
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /healthyz
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - ls
                - /app/http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 80
              path: /healthyz
              httpHeaders:
                - name: Custom-Headers
                  value: Awsome
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: 
                - echo "stoping"
          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "256m"
#          dnsPolicy: ClusterFirst
#          restartPolicy: Always
#          schedulerName: default-scheduler
#          securityContext: {}
