exercise/8.2/ingress-svc.http.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
  labels:
    app: http
spec:
  selector:
    app: http
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liljackson-http
  annotations:
    # cert-manager.io/issuer: "letsencrypt-liljackson" # Replace this with a production issuer once you've tested it
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/proxy-body-size: 512m
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # kubernetes.io/tls-acme: "true"
    # nginx.org/ssl-services: "nginx-service"
spec:
  # ingressClassName: ""
  rules:
    - host: http.liljackson.xyz
      http:
          paths:
            - path: /
              pathType: ImplementationSpecific
              backend:
                service: 
                  name: http-service
                  port:
                    number: 80
  tls:
    - hosts:
        - http.liljackson.xyz
      secretName: wildcard-liljackson-xyz-tls #liljackson-xyz-tls
